# atlas-workspace

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  atlas-workspace.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: compute_single_overlap_wkt.py  debug_inject.py  diagnose_cannibalization.py  diagnose_cannibalization_safe.py  fix_wkt_exports.py  inject_location_scores.py  make_cannibalization_polygons.py  regen_cannibalization_from_exports.py
src/: analysis.py  data_loading.py  main.py  processing.py  visualization.py
