[project]
name = "project-atlas"
version = "0.1.0"
description = "Project Atlas: geospatial analysis for client location intelligence"
authors = [ { name = "Luqui2003" } ]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
